--- a/tracelink-frontend/public/index.html
+++ b/tracelink-frontend/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-  <<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 >
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
